--- a/styles.css
+++ b/styles.css
@@ -137,6 +137,8 @@ nav {
 .mobile-menu {
     position: absolute;
     top: 60px;
+    left: 0;
+    width: 100%;
     padding: 24px;
     background-color: var(--white);
 }
@@ -166,8 +168,8 @@ nav {
     color: var(--hospital-green) !important;
 }
 
-/* aside / product detail / shopping cart */
-.product-detail {
+/* aside / product detail shopping cart */
+.product-detail-shopping-cart {
     width: 360px;
     padding: 0 24px;
     box-sizing: border-box;
@@ -286,6 +288,73 @@ nav {
     color: var(--very-light-pink);
 }
 
+/* aside / product detail */
+
+.product-detail {
+    width: 360px;
+    padding-bottom: 24px;
+    position: absolute;
+    right: 0;
+    background-color: var(--white);
+}
+.product-detail-close {
+    background: var(--white);
+    width: 14px;
+    height: 14px;
+    position: absolute;
+    top: 24px;
+    left: 24px;
+    z-index: 2;
+    padding: 12px;
+    border-radius: 50%;
+}
+.product-detail-close:hover {
+    cursor: pointer;
+}
+.product-detail > img:nth-child(2) {
+    width: 100%;
+    height: 360px;
+    object-fit: cover;
+    border-radius: 0 0 20px 20px;
+}
+.product-detail-info {
+    margin: 24px 24px 0 24px;
+}
+.product-detail-info-detail p:nth-child(1) {
+    font-weight: bold;
+    font-size: var(--md);
+    margin-top: 0;
+    margin-bottom: 4px;
+}
+.product-detail-info p:nth-child(2) {
+    color: var(--very-light-pink);
+    font-size: var(--md);
+    margin-top: 0;
+    margin-bottom: 36px;
+}
+.product-detail-info p:nth-child(3) {
+    color: var(--very-light-pink);
+    font-size: var(--sm);
+    margin-top: 0;
+    margin-bottom: 36px;
+}
+.primary-button {
+    background-color: var(--hospital-green);
+    border-radius: 8px;
+    border: none;
+    color: var(--white);
+    width: 100%;
+    cursor: pointer;
+    font-size: var(--md);
+    font-weight: bold;
+    height: 50px;
+}
+.add-to-cart-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 @media (max-width: 640px) {
     .menu {
         display: block;
@@ -301,7 +370,7 @@ nav {
     .desktop-menu {
         display: none;
     }
-    .product-detail {
+    .product-detail-shopping-cart {
         width: 100%;
     }
     .cards-container {
@@ -314,6 +383,9 @@ nav {
         width: 140px;
         height: 140px;
     }
+    .product-detail {
+        width: 100%;
+      }
 }
 @media (min-width: 641px) {
     .mobile-menu {
